# muno

./: .clang-format  .gitmodules  CMakeLists.txt  NOTICE
src/: CMakeLists.txt  main.cpp
src/resources/: CMakeLists.txt
src/resources/include/: Resources.hpp
src/resources/src/: Resources.gen
tools/cpp-resources-generator/: CMakeLists.txt  main.cpp
